--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,6 +18,7 @@
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:padding="0dp"
+            android:adjustViewBounds="true"
             android:layout_weight="1"
             android:src="@drawable/apache"
             android:id="@+id/carta1"/>
@@ -27,7 +29,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/arbol"
-            android:id="@+id/carta2"/>
+            android:id="@+id/carta2"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,7 +38,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/luna"
-            android:id="@+id/carta3"/>
+            android:id="@+id/carta3"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,7 +47,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/arana"
-            android:id="@+id/carta4"/>
+            android:id="@+id/carta4"
+            android:adjustViewBounds="true"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -57,7 +62,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/arpa"
-            android:id="@+id/carta5"/>
+            android:id="@+id/carta5"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,7 +71,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/maceta"
-            android:id="@+id/carta6"/>
+            android:id="@+id/carta6"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -73,7 +80,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/bandera"
-            android:id="@+id/carta7"/>
+            android:id="@+id/carta7"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -81,7 +89,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/jaras"
-            android:id="@+id/carta8"/>
+            android:id="@+id/carta8"
+            android:adjustViewBounds="true"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -95,7 +104,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/camaron"
-            android:id="@+id/carta9"/>
+            android:id="@+id/carta9"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -103,7 +113,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/escalera"
-            android:id="@+id/carta10"/>
+            android:id="@+id/carta10"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -111,7 +122,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/mano"
-            android:id="@+id/carta11"/>
+            android:id="@+id/carta11"
+            android:adjustViewBounds="true"/>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -119,7 +131,8 @@
             android:padding="0dp"
             android:layout_weight="1"
             android:src="@drawable/garza"
-            android:id="@+id/carta12"/>
+            android:id="@+id/carta12"
+            android:adjustViewBounds="true"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -129,7 +142,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reiniciar" />
+            android:text="Reiniciar"
+            android:onClick="reiniciar"/>
 
     </LinearLayout>
 
